--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -15,4 +15,33 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <plugins>
+        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                        <archive>
+                                <manifest>
+                                        <addClasspath>true</addClasspath>
+                                </manifest>
+                        </archive>
+                </configuration>
+        </plugin>
+        <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                        <archive>
+                                <manifest>
+                                        <mainClass>kafkaproj.App</mainClass>
+                                </manifest>
+                        </archive>
+                        <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                </configuration>
+        </plugin>
+  </plugins>
+</build>
 </project>
