--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -25,6 +25,7 @@
                         <archive>
                                 <manifest>
                                         <addClasspath>true</addClasspath>
+                                        <mainClass>kafkaproj.App</mainClass>
                                 </manifest>
                         </archive>
                 </configuration>
