--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -37,7 +37,7 @@
                         <archive>
                                 <manifest>
                                         <addClasspath>true</addClasspath>
-                                        <mainClass>kafkaproj.App</mainClass>
+                                        <mainClass>com.sanjay.kafkatest.ProducerDemo</mainClass>
                                 </manifest>
                         </archive>
                 </configuration>
@@ -47,7 +47,7 @@
                 <configuration>
                         <archive>
                                 <manifest>
-                                        <mainClass>kafkaproj.App</mainClass>
+                                        <mainClass>com.sanjay.kafkatest.ProducerDemo</mainClass>
                                 </manifest>
                         </archive>
                         <descriptorRefs>
