--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>kafka-project</name>
   <url>http://maven.apache.org</url>
+    <!-- comments to make commit work-->
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
