--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -33,5 +33,17 @@
             <version>2.2.0</version> <!-- or whatever the latest version is -->
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
