--- a/kafka-project/pom.xml
+++ b/kafka-project/pom.xml
@@ -35,6 +35,11 @@
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
         </dependency>
@@ -47,6 +52,11 @@
             <groupId>com.twitter</groupId>
             <artifactId>twitter-api-java-sdk</artifactId>
             <version>2.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.redouane59.twitter</groupId>
+            <artifactId>twittered</artifactId>
+            <version>1.26</version>
         </dependency>
     </dependencies>
 </project>
